# radiosity

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.cpp  camera.hpp  editor.cpp  editor.hpp  gui.cpp  gui.hpp  main.cpp  main_temp.cpp  matrix_operations.cpp  matrix_operations.hpp  plane.cpp  plane.hpp  radiosity_render_engine.cpp  radiosity_render_engine.hpp  ray.hpp  render_engine.cpp  render_engine.hpp  render_settings.cpp  render_settings.hpp  render_settings_temp.cpp  render_settings_temp.hpp  scene.cpp  scene.hpp  settings.cpp  settings.hpp  shader.cpp  shader.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
